--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -7,8 +7,12 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"babel-polyfill": "^6.22.0",
 		"react": "~15.4.0",
-		"react-native": "0.41.2"
+		"react-dom": "^15.4.2",
+		"react-native": "0.41.2",
+		"react-redux": "^5.0.2",
+		"redux": "^3.6.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
