--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.22.0",
+		"material-ui": "^0.17.0",
 		"react": "~15.4.0",
 		"react-dom": "^15.4.2",
 		"react-native": "0.41.2",
@@ -15,10 +16,17 @@
 		"redux": "^3.6.0"
 	},
 	"devDependencies": {
+		"babel-core": "^6.22.1",
 		"babel-jest": "18.0.0",
+		"babel-loader": "^6.2.10",
+		"babel-preset-es2015": "^6.22.0",
+		"babel-preset-react": "^6.22.0",
+		"babel-preset-react-hmre": "^1.1.1",
 		"babel-preset-react-native": "1.9.1",
 		"jest": "18.1.0",
-		"react-test-renderer": "~15.4.0"
+		"react-test-renderer": "~15.4.0",
+		"webpack": "^2.2.1",
+		"webpack-dev-server": "^2.3.0"
 	},
 	"jest": {
 		"preset": "react-native"
