--- a/js/ui/.babelrc
+++ b/js/ui/.babelrc
@@ -1,3 +1,19 @@
 {
-"presets": ["react-native"]
+  "plugins": [
+    "transform-class-properties"
+  ],
+
+  "presets": [
+      "es2015",
+      "react",
+      "react-native"
+  ],
+
+  "env": {
+    "development": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
