--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -5,9 +5,9 @@
 	"scripts": {
 		"native:start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"web:start": "webpack-dev-server",
-		"web:dev": "cross-env NODE_ENV=production webpack --env.prod=true",
-		"web:prod": "cross-env NODE_ENV=production webpack-dev-server --env.prod=true"
+		"web:start": "cross-env PLATFORM_ENV=web webpack-dev-server",
+		"web:build": "cross-env NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
+		"web:prod": "cross-env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true"
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.22.0",
@@ -18,7 +18,8 @@
 		"react-native": "^0.41.2",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
-		"redux-actions": "^1.2.1"
+		"redux-actions": "^1.2.1",
+		"redux-future": "^0.0.11"
 	},
 	"devDependencies": {
 		"babel-core": "^6.22.1",
