--- a/js/ui/.flowconfig
+++ b/js/ui/.flowconfig
@@ -34,6 +34,7 @@ experimental.strict_type_args=true
 munge_underscores=true
 
 module.name_mapper='^[./a-zA-Z0-9$_-]+\.\(bmp\|gif\|jpg\|jpeg\|png\|psd\|svg\|webp\|m4v\|mov\|mp4\|mpeg\|mpg\|webm\|aac\|aiff\|caf\|m4a\|mp3\|wav\|html\|pdf\)$' -> 'RelativeImageStub'
+module.name_mapper='\(react-redux\|\immutable\material-ui*)' -> '<PROJECT_ROOT>/GeneralStub.js.flow'
 
 suppress_type=$FlowIssue
 suppress_type=$FlowFixMe
