--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.22.0",
+		"folktale": "git+https://github.com/origamitower/folktale.git",
 		"immutable": "^3.8.1",
 		"material-ui": "^0.17.0",
 		"react": "~15.4.0",
@@ -25,6 +26,7 @@
 		"babel-core": "^6.22.1",
 		"babel-jest": "18.0.0",
 		"babel-loader": "^6.2.10",
+		"babel-plugin-transform-async-to-generator": "^6.22.0",
 		"babel-preset-es2015": "^6.22.0",
 		"babel-preset-react": "^6.22.0",
 		"babel-preset-react-hmre": "^1.1.1",
