remove material-ui and use fabrixjs instead

--- a/js/ui/.babelrc
+++ b/js/ui/.babelrc
@@ -1,7 +1,8 @@
 {
   "plugins": [
     "transform-class-properties",
-    "transform-async-to-generator"
+    "transform-async-to-generator",
+    "transform-decorators-legacy"
   ],
 
   "presets": [
