--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -11,10 +11,12 @@
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.22.0",
+		"core-decorators": "^0.15.0",
 		"daggy": "git+https://github.com/fantasyland/daggy.git",
 		"folktale": "git+https://github.com/origamitower/folktale.git",
 		"immutable": "^3.8.1",
-		"material-ui": "^0.17.0",
+		"office-ui-fabric-core": "^6.0.0",
+		"office-ui-fabric-react": "^1.14.1",
 		"react": "~15.4.0",
 		"react-dom": "^15.4.2",
 		"react-native": "^0.41.2",
@@ -27,6 +29,7 @@
 		"babel-jest": "18.0.0",
 		"babel-loader": "^6.2.10",
 		"babel-plugin-transform-async-to-generator": "^6.22.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-preset-es2015": "^6.22.0",
 		"babel-preset-react": "^6.22.0",
 		"babel-preset-react-hmre": "^1.1.1",
