--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -15,12 +15,12 @@
 		"daggy": "git+https://github.com/fantasyland/daggy.git",
 		"folktale": "git+https://github.com/origamitower/folktale.git",
 		"immutable": "^3.8.1",
-		"office-ui-fabric-core": "^6.0.0",
-		"office-ui-fabric-react": "^1.14.1",
+		"material-ui": "^0.17.0",
 		"react": "~15.4.0",
 		"react-dom": "^15.4.2",
 		"react-native": "^0.41.2",
 		"react-redux": "^5.0.2",
+		"react-tap-event-plugin": "^2.0.1",
 		"redux": "^3.6.0",
 		"redux-actions": "^1.2.1"
 	},
