--- a/js/ui/android/app/build.gradle
+++ b/js/ui/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.tagonize"
+        applicationId "com.barter"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
