--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -10,15 +10,17 @@
 		"web:prod": "cross-env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true"
 	},
 	"dependencies": {
-		"babel-polyfill": "^6.22.0",
+		"babel-polyfill": "^6.23.0",
 		"core-decorators": "^0.15.0",
 		"folktale": "^2.0.0-alpha3",
 		"immutable": "^3.8.1",
-		"material-ui": "^0.17.0",
-		"react": "~15.4.0",
+		"material-ui": "^0.17.1",
+		"react": "~15.4.2",
 		"react-dom": "^15.4.2",
+		"react-facebook-login": "^3.5.0",
+		"react-google-login": "^2.8.5",
 		"react-native": "latest",
-		"react-redux": "^5.0.2",
+		"react-redux": "^5.0.3",
 		"react-tap-event-plugin": "^2.0.1",
 		"redux": "^3.6.0",
 		"redux-actions": "^1.2.1"
@@ -40,7 +42,8 @@
 		"react-test-renderer": "~15.4.0",
 		"style-loader": "^0.13.1",
 		"webpack": "^2.2.1",
-		"webpack-dev-server": "^2.3.0"
+		"webpack-dev-server": "^2.3.0",
+		"webpack-dotenv-plugin": "^2.0.0"
 	},
 	"jest": {
 		"preset": "react-native"
