--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -23,7 +23,8 @@
 		"react-redux": "^5.0.3",
 		"react-tap-event-plugin": "^2.0.1",
 		"redux": "^3.6.0",
-		"redux-actions": "^1.2.1"
+		"redux-actions": "^1.2.1",
+		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
 		"babel-core": "^6.22.1",
