--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,8 @@
         "NODE_ENV": "development",
         "SERVER_PORT": "5000",
         "FB_LOGIN_URL": "https://graph.facebook.com/me?access_token",
-        "DB_USERNAME": "neo4j",
-        "DB_PASSWORD": "neo4j"
+        "DB_USERNAME": "barter",
+        "DB_PASSWORD": "barter_password"
       }
     },
     {
