--- a/js/api/package.json
+++ b/js/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV='development' nodemon ./bin/index.js"
+    "start": "NODE_ENV=development nodemon ./bin/index.js"
   },
   "description": "The api for the Barter UI",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "koa-passport": "^3.0.0",
     "koa-router": "next",
     "morgan": "^1.8.1",
-    "neo4j-driver": "^1.2.0",
+    "neo4j-driver": "next",
     "node-fetch": "^1.6.3",
     "nodemon": "^1.11.0",
     "uws": "^0.13.0",
