create a token save it and return it to the client

--- a/js/api/.env.sample
+++ b/js/api/.env.sample
@@ -3,3 +3,6 @@ FB_LOGIN_URL=https://graph.facebook.com/me?access_token=
 GOOGLE_LOGIN_URL=
 DB_USERNAME=
 DB_PASSWORD=
+SESSION_KEY=
+JWT_SECRET=
+JWT_LIFE_SPAN=7d
