--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,11 @@
         "SERVER_PORT": "5000",
         "FB_LOGIN_URL": "https://graph.facebook.com/me?access_token",
         "DB_USERNAME": "barter",
-        "DB_PASSWORD": "barter_password"
+        "DB_PASSWORD": "barter_password",
+        "SESSION_KEY": "WdF0YZhpypVz+fNSXlvOdEHQRifJ+U8XMmcYRWFm/hU=",
+        "JWT_SECRET": "34mMFlo4QLl3VKmIlCR7AwIhIVC/YnJRgfZmCMcnQBY=",
+        "JWT_LIFE_SPAN": "7d"
+
       }
     },
     {
