--- a/js/api/package.json
+++ b/js/api/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "folktale": "^2.0.0-alpha3",
     "global": "^4.3.1",
+    "jsonwebtoken": "^7.3.0",
     "kcors": "2",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
