--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -40,7 +40,9 @@
 		"css-loader": "^0.26.1",
 		"file-loader": "^0.10.0",
 		"jest": "18.1.0",
+		"node-sass": "^4.5.2",
 		"react-test-renderer": "~15.4.0",
+		"sass-loader": "^6.0.3",
 		"style-loader": "^0.13.1",
 		"webpack": "^2.2.1",
 		"webpack-dev-server": "^2.3.0",
