--- a/js/api/package.json
+++ b/js/api/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV='development' ./node_modules/.bin/nodemon ./bin/index.js"
+    "start": "NODE_ENV='development' ./node_modules/.bin/nodemon ./bin/index.js",
+    "test": "node_modules/.bin/ava ./**/*.test.js"
   },
   "description": "The api for the Barter UI",
   "main": "index.js",
@@ -32,6 +33,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "ava": "^0.18.2"
+    "ava": "^0.18.2",
+    "sinon": "^2.1.0"
   }
 }
