--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
         "NODE_ENV": "development",
         "SERVER_PORT": "5000",
         "FB_LOGIN_URL": "https://graph.facebook.com/me?access_token",
+        "GOOGLE_LOGIN_URL": "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token",
         "DB_USERNAME": "barter",
         "DB_PASSWORD": "barter_password",
         "SESSION_KEY": "WdF0YZhpypVz+fNSXlvOdEHQRifJ+U8XMmcYRWFm/hU=",
