--- a/js/ui-tmp/android/app/build.gradle
+++ b/js/ui-tmp/android/app/build.gradle
@@ -84,10 +84,10 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.bartr"
+        applicationId "com.barter"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
