--- a/js/ui/ios/Bartr.xcodeproj/xcshareddata/xcschemes/Bartr.xcscheme
+++ b/js/ui/ios/Bartr.xcodeproj/xcshareddata/xcschemes/Bartr.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "0620"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "83CBBA2D1A601D0E00E9B192"
-               BuildableName = "libReact.a"
-               BlueprintName = "React"
-               ReferencedContainer = "container:../node_modules/react-native/React/React.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Bartr.app"
-               BlueprintName = "Bartr"
-               ReferencedContainer = "container:Bartr.xcodeproj">
+               BuildableName = "bartr.app"
+               BlueprintName = "bartr"
+               ReferencedContainer = "container:bartr.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,27 +29,27 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BartrTests.xctest"
-               BlueprintName = "BartrTests"
-               ReferencedContainer = "container:Bartr.xcodeproj">
+               BuildableName = "bartrTests.xctest"
+               BlueprintName = "bartrTests"
+               ReferencedContainer = "container:bartr.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      buildConfiguration = "Debug">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BartrTests.xctest"
-               BlueprintName = "BartrTests"
-               ReferencedContainer = "container:Bartr.xcodeproj">
+               BuildableName = "bartrTests.xctest"
+               BlueprintName = "bartrTests"
+               ReferencedContainer = "container:bartr.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,51 +57,48 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Bartr.app"
-            BlueprintName = "Bartr"
-            ReferencedContainer = "container:Bartr.xcodeproj">
+            BuildableName = "bartr.app"
+            BlueprintName = "bartr"
+            ReferencedContainer = "container:bartr.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
+      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Bartr.app"
-            BlueprintName = "Bartr"
-            ReferencedContainer = "container:Bartr.xcodeproj">
+            BuildableName = "bartr.app"
+            BlueprintName = "bartr"
+            ReferencedContainer = "container:bartr.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
+      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Bartr.app"
-            BlueprintName = "Bartr"
-            ReferencedContainer = "container:Bartr.xcodeproj">
+            BuildableName = "bartr.app"
+            BlueprintName = "bartr"
+            ReferencedContainer = "container:bartr.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
