--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "barter",
+	"name": "bartr",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -19,7 +19,7 @@
 		"react-dom": "^15.4.2",
 		"react-facebook-login": "^3.5.0",
 		"react-google-login": "^2.8.5",
-		"react-native": "latest",
+		"react-native": "0.38.1",
 		"react-redux": "^5.0.3",
 		"react-tap-event-plugin": "^2.0.1",
 		"redux": "^3.6.0",
@@ -27,13 +27,14 @@
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
-		"babel-core": "^6.22.1",
+		"babel-core": "6.24.0",
 		"babel-jest": "19.0.0",
-		"babel-loader": "^6.2.10",
+		"babel-loader": "6.4.1",
+		"babel-plugin-transform-async-functions": "^6.22.0",
 		"babel-plugin-transform-async-to-generator": "^6.22.0",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-preset-es2015": "^6.22.0",
-		"babel-preset-react": "^6.22.0",
+		"babel-preset-es2015": "6.24.0",
+		"babel-preset-react": "6.23.0",
 		"babel-preset-react-hmre": "^1.1.1",
 		"babel-preset-react-native": "1.9.1",
 		"cross-env": "^3.1.4",
@@ -45,7 +46,7 @@
 		"sass-loader": "^6.0.3",
 		"style-loader": "^0.13.1",
 		"webpack": "^2.2.1",
-		"webpack-dev-server": "^2.3.0",
+		"webpack-dev-server": "2.4.2",
 		"webpack-dotenv-plugin": "^2.0.0"
 	},
 	"jest": {
