--- a/js/ui/ios/Bartr/Info.plist
+++ b/js/ui/ios/Bartr/Info.plist
@@ -50,5 +50,27 @@
 			</dict>
 		</dict>
 	</dict>
+  <!--FB app setup-->
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb268075730303260</string>
+    </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>268075730303260</string>
+  <key>FacebookDisplayName</key>
+  <string>bartr</string>
+  <!--Whitelist request to fb-->
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fb-messenger-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+  </array>
 </dict>
 </plist>
