--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -20,6 +20,7 @@
 		"react-facebook-login": "^3.5.0",
 		"react-google-login": "^2.8.5",
 		"react-native": "0.38.1",
+		"react-native-facebook-login": "^1.4.0",
 		"react-redux": "^5.0.3",
 		"react-tap-event-plugin": "^2.0.1",
 		"redux": "^3.6.0",
