--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"native:start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"web:start": "cross-env PORT=3000 PLATFORM_ENV=web webpack-dev-server",
 		"web:build": "cross-env NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
 		"web:prod": "cross-env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true"
@@ -15,12 +15,13 @@
 		"folktale": "^2.0.0-alpha3",
 		"immutable": "^3.8.1",
 		"material-ui": "^0.17.1",
-		"react": "~15.4.2",
+		"react": "~15.4.0-rc.4",
 		"react-dom": "^15.4.2",
 		"react-facebook-login": "^3.5.0",
 		"react-google-login": "^2.8.5",
 		"react-native": "0.38.1",
 		"react-native-facebook-login": "^1.4.0",
+		"react-native-google-signin": "^0.9.0",
 		"react-redux": "^5.0.3",
 		"react-tap-event-plugin": "^2.0.1",
 		"redux": "^3.6.0",
@@ -41,8 +42,9 @@
 		"css-loader": "^0.26.1",
 		"file-loader": "^0.10.0",
 		"jest": "19.0.2",
+		"jest-react-native": "18.0.0",
 		"node-sass": "^4.5.2",
-		"react-test-renderer": "~15.4.1",
+		"react-test-renderer": "~15.4.0-rc.4",
 		"sass-loader": "^6.0.3",
 		"style-loader": "^0.13.1",
 		"webpack": "^2.2.1",
