--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
       "env": {
         "NODE_ENV": "development",
         "SERVER_PORT": "5000",
-        "FB_LOGIN_URL": "https://graph.facebook.com/me?access_token",
+        "FB_LOGIN_URL": "https://graph.facebook.com/me?fields=email,name,first_name,last_name,picture&access_token&access_token",
         "GOOGLE_LOGIN_URL": "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token",
         "DB_USERNAME": "barter",
         "DB_PASSWORD": "barter_password",
