--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -3,11 +3,13 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"native:start": "node node_modules/react-native/local-cli/cli.js start",
+		"native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest",
-		"web:start": "cross-env PORT=3000 PLATFORM_ENV=web webpack-dev-server",
-		"web:build": "cross-env NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
-		"web:prod": "cross-env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true"
+		"web:start": "env-cmd ./.env PORT=3000 PLATFORM_ENV=web webpack-dev-server",
+		"web:build": "env-cmd ./.env NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
+		"web:prod": "env-cmd ./.env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true",
+		"native:android": "env-cmd ./.env react-native run-android",
+		"postinstall": "rndebugger-open"
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.23.0",
@@ -34,16 +36,19 @@
 		"babel-loader": "6.4.1",
 		"babel-plugin-transform-async-functions": "^6.22.0",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-inline-environment-variables": "^0.0.2",
 		"babel-preset-es2015": "6.24.0",
 		"babel-preset-react": "6.23.0",
 		"babel-preset-react-hmre": "^1.1.1",
 		"babel-preset-react-native": "1.9.1",
-		"cross-env": "^3.1.4",
 		"css-loader": "^0.26.1",
+		"env-cmd": "^5.0.0",
 		"file-loader": "^0.10.0",
 		"jest": "19.0.2",
 		"jest-react-native": "18.0.0",
 		"node-sass": "^4.5.2",
+		"react-devtools-core": "^2.0.12",
+		"react-native-debugger-open": "^0.3.4",
 		"react-test-renderer": "~15.4.0-rc.4",
 		"sass-loader": "^6.0.3",
 		"style-loader": "^0.13.1",
