--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -5,10 +5,10 @@
 	"scripts": {
 		"native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest",
-		"web:start": "env-cmd ./.env PORT=3000 PLATFORM_ENV=web webpack-dev-server",
-		"web:build": "env-cmd ./.env NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
-		"web:prod": "env-cmd ./.env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true",
-		"native:android": "env-cmd ./.env react-native run-android",
+		"web:start": "./node_modules/.bin/env-cmd ./.env PORT=3000 PLATFORM_ENV=web webpack-dev-server",
+		"web:build": "./node_modules/.bin/env-cmd ./.env NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
+		"web:prod": "./node_modules/.bin/env-cmd ./.env NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true",
+		"native:android": "./node_modules/.bin/env-cmd ./.env react-native run-android",
 		"postinstall": "rndebugger-open"
 	},
 	"dependencies": {
