--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -1,62 +1,62 @@
 {
-	"name": "bartr",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest",
-		"web:start": "PORT=3000 PLATFORM_ENV=web webpack-dev-server",
-		"web:build": "NODE_ENV=production PLATFORM_ENV=web webpack --env.prod=true",
-		"web:prod": "NODE_ENV=production PLATFORM_ENV=web  webpack-dev-server --env.prod=true",
-		"native:android": "env-cmd ./.env react-native run-android",
-		"postinstall": "rndebugger-open"
-	},
-	"dependencies": {
-		"babel-polyfill": "^6.23.0",
-		"core-decorators": "^0.15.0",
-		"folktale": "^2.0.0-alpha3",
-		"immutable": "^3.8.1",
-		"material-ui": "^0.17.1",
-		"react": "~15.4.0-rc.4",
-		"react-dom": "^15.4.2",
-		"react-facebook-login": "^3.5.0",
-		"react-google-login": "^2.8.5",
-		"react-native": "0.38.1",
-		"react-native-facebook-login": "^1.4.0",
-		"react-native-google-signin": "^0.9.0",
-		"react-redux": "^5.0.3",
-		"react-tap-event-plugin": "^2.0.1",
-		"redux": "^3.6.0",
-		"redux-actions": "^1.2.1",
-		"whatwg-fetch": "^2.0.3"
-	},
-	"devDependencies": {
-		"babel-core": "6.24.0",
-		"babel-jest": "19.0.0",
-		"babel-loader": "6.4.1",
-		"babel-plugin-transform-async-functions": "^6.22.0",
-		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-plugin-transform-inline-environment-variables": "^0.0.2",
-		"babel-preset-es2015": "6.24.0",
-		"babel-preset-react": "6.23.0",
-		"babel-preset-react-hmre": "^1.1.1",
-		"babel-preset-react-native": "1.9.1",
-		"css-loader": "^0.26.1",
-		"env-cmd": "^5.0.0",
-		"file-loader": "^0.10.0",
-		"jest": "19.0.2",
-		"jest-react-native": "18.0.0",
-		"node-sass": "^4.5.2",
-		"react-devtools-core": "^2.0.12",
-		"react-native-debugger-open": "^0.3.4",
-		"react-test-renderer": "~15.4.0-rc.4",
-		"sass-loader": "^6.0.3",
-		"style-loader": "^0.13.1",
-		"webpack": "^2.2.1",
-		"webpack-dev-server": "2.4.2",
-		"webpack-dotenv-plugin": "^2.0.0"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "bartr",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "web:start": "PLATFORM_ENV=web env-cmd ./.env webpack-dev-server",
+    "web:build": "PLATFORM_ENV=web env-cmd ./.env webpack --env.prod=true",
+    "web:prod": "PLATFORM_ENV=web  env-cmd ./.env webpack-dev-server --env.prod=true",
+    "native:android": "PLATFORM_ENV=mobile env-cmd ./.env react-native run-android",
+    "postinstall": "rndebugger-open"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "core-decorators": "^0.15.0",
+    "folktale": "^2.0.0-alpha3",
+    "immutable": "^3.8.1",
+    "material-ui": "^0.17.1",
+    "react": "~15.4.0-rc.4",
+    "react-dom": "^15.4.2",
+    "react-facebook-login": "^3.5.0",
+    "react-google-login": "^2.8.5",
+    "react-native": "0.38.1",
+    "react-native-facebook-login": "^1.4.0",
+    "react-native-google-signin": "^0.9.0",
+    "react-redux": "^5.0.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.1",
+    "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-core": "6.24.0",
+    "babel-jest": "19.0.0",
+    "babel-loader": "6.4.1",
+    "babel-plugin-transform-async-functions": "^6.22.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-inline-environment-variables": "0.0.2",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-native": "1.9.1",
+    "css-loader": "^0.26.1",
+    "env-cmd": "^5.0.0",
+    "file-loader": "^0.10.0",
+    "jest": "19.0.2",
+    "jest-react-native": "18.0.0",
+    "node-sass": "^4.5.2",
+    "react-devtools-core": "^2.0.12",
+    "react-native-debugger-open": "^0.3.4",
+    "react-test-renderer": "~15.4.0-rc.4",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "2.4.2",
+    "webpack-dotenv-plugin": "^2.0.0"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
