add Router and an empty Home page

--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -25,6 +25,7 @@
     "react-native-facebook-login": "^1.4.0",
     "react-native-google-signin": "^0.9.0",
     "react-redux": "^5.0.3",
+    "react-router-native": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
@@ -47,7 +48,7 @@
     "jest": "19.0.2",
     "jest-react-native": "18.0.0",
     "node-sass": "^4.5.2",
-    "react-devtools-core": "^2.0.12",
+    "react-devtools-core": "^2.1.0",
     "react-native-debugger-open": "^0.3.4",
     "react-test-renderer": "~15.4.0-rc.4",
     "sass-loader": "^6.0.3",
