--- a/js/ui/android/app/build.gradle
+++ b/js/ui/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-facebook-login')
+    compile project(':react-native-google-signin')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile 'com.facebook.android:facebook-android-sdk:4.+'
