--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -17,6 +17,7 @@
     "folktale": "^2.0.0-alpha3",
     "immutable": "^3.8.1",
     "material-ui": "^0.17.1",
+    "native-base": "^2.1.3",
     "react": "~15.4.0-rc.4",
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.5.0",
