--- a/js/ui/android/.project
+++ b/js/ui/android/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bartr</name>
-	<comment>Project bartr created by Buildship.</comment>
+	<name>investreck</name>
+	<comment>Project investreck created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
