--- a/js/ui/ios/Investreck/Info.plist
+++ b/js/ui/ios/Investreck/Info.plist
@@ -61,7 +61,7 @@
     <key>FacebookAppID</key>
     <string>268075730303260</string>
     <key>FacebookDisplayName</key>
-    <string>bartr</string>
+    <string>investreck</string>
     <key>LSApplicationQueriesSchemes</key>
     <array>
       <string>fbapi</string>
