--- a/js/ui/android/app/build.gradle
+++ b/js/ui/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.bartr"
+        applicationId "com.investreck"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
