--- a/js/ui/ios/Investreck.xcodeproj/xcshareddata/xcschemes/Investreck.xcscheme
+++ b/js/ui/ios/Investreck.xcodeproj/xcshareddata/xcschemes/Investreck.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "bartr.app"
-               BlueprintName = "bartr"
-               ReferencedContainer = "container:bartr.xcodeproj">
+               BuildableName = "investreck.app"
+               BlueprintName = "investreck"
+               ReferencedContainer = "container:investreck.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "bartrTests.xctest"
                BlueprintName = "bartrTests"
-               ReferencedContainer = "container:bartr.xcodeproj">
+               ReferencedContainer = "container:investreck.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -49,7 +49,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "bartrTests.xctest"
                BlueprintName = "bartrTests"
-               ReferencedContainer = "container:bartr.xcodeproj">
+               ReferencedContainer = "container:investreck.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bartr.app"
-            BlueprintName = "bartr"
-            ReferencedContainer = "container:bartr.xcodeproj">
+            BuildableName = "investreck.app"
+            BlueprintName = "investreck"
+            ReferencedContainer = "container:investreck.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bartr.app"
-            BlueprintName = "bartr"
-            ReferencedContainer = "container:bartr.xcodeproj">
+            BuildableName = "investreck.app"
+            BlueprintName = "investreck"
+            ReferencedContainer = "container:investreck.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bartr.app"
-            BlueprintName = "bartr"
-            ReferencedContainer = "container:bartr.xcodeproj">
+            BuildableName = "investreck.app"
+            BlueprintName = "investreck"
+            ReferencedContainer = "container:investreck.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
