--- a/js/ui/ios/Investreck/investreck.entitlements
+++ b/js/ui/ios/Investreck/investreck.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)org.reactjs.native.example.bartr</string>
+		<string>$(AppIdentifierPrefix)org.reactjs.native.example.investreck</string>
 	</array>
 </dict>
 </plist>
