--- a/js/ui/ios/Podfile
+++ b/js/ui/ios/Podfile
@@ -1,11 +1,11 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-target 'bartr' do
+target 'investreck' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
-  # Pods for bartr
+  # Pods for investreck
   pod 'Google/SignIn'
 
   target 'bartrTests' do
