--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,9 @@
         "NODE_ENV": "development",
         "SERVER_PORT": "5000",
         "FB_LOGIN_URL": "https://graph.facebook.com/me?fields=email,name,first_name,last_name,picture&access_token&access_token",
-        "GOOGLE_LOGIN_URL": "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token",
-        "DB_USERNAME": "investeck",
-        "DB_PASSWORD": "investeck_password",
+        "GOOGLE_LOGIN_URL": "https://www.googleapis.com/plus/v1/people/me?access_token",
+        "DB_USERNAME": "barter",
+        "DB_PASSWORD": "barter_password",
         "SESSION_KEY": "WdF0YZhpypVz+fNSXlvOdEHQRifJ+U8XMmcYRWFm/hU=",
         "JWT_SECRET": "34mMFlo4QLl3VKmIlCR7AwIhIVC/YnJRgfZmCMcnQBY=",
         "JWT_LIFE_SPAN": "7d"
@@ -32,3 +32,4 @@
     }
   ]
 }
+
