--- a/js/api/.env.sample
+++ b/js/api/.env.sample
@@ -1,8 +1,9 @@
+NODE_ENV=development
 SERVER_PORT=5000
-FB_LOGIN_URL=https://graph.facebook.com/me?access_token=
-GOOGLE_LOGIN_URL=
-DB_USERNAME=
-DB_PASSWORD=
-SESSION_KEY=
-JWT_SECRET=
-JWT_LIFE_SPAN=7d
+FB_LOGIN_URL=https://graph.facebook.com/me?fields=email,name,first_name,last_name,picture&access_token&access_token
+GOOGLE_LOGIN_URL=https://www.googleapis.com/oauth2/v3/about?access_token
+DB_USERNAME=investreck
+DB_PASSWORD=barter_password
+SESSION_KEY=WdF0YZhpypVz+fNSXlvOdEHQRifJ+U8XMmcYRWFm/hU=
+JWT_SECRET=34mMFlo4QLl3VKmIlCR7AwIhIVC/YnJRgfZmCMcnQBY=
+JWT_LIFE_SPAN="7d"
