--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -26,6 +26,7 @@
     "react-native-facebook-login": "^1.4.0",
     "react-native-google-signin": "^0.9.0",
     "react-redux": "^5.0.3",
+    "react-router-dom": "^4.1.1",
     "react-router-native": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
