--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -16,7 +16,8 @@
     "core-decorators": "^0.15.0",
     "folktale": "^2.0.0-alpha3",
     "immutable": "^3.8.1",
-    "material-ui": "^0.17.1",
+    "material-ui": "next",
+    "material-ui-icons": "next",
     "native-base": "^2.1.3",
     "react": "~15.4.0-rc.4",
     "react-dom": "^15.4.2",
@@ -44,7 +45,7 @@
     "babel-preset-react": "6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-react-native": "1.9.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.1",
     "env-cmd": "^5.0.0",
     "file-loader": "^0.10.0",
     "jest": "19.0.2",
@@ -53,7 +54,7 @@
     "react-native-debugger-open": "^0.3.4",
     "react-test-renderer": "~15.4.0-rc.4",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.17.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "2.4.2",
     "webpack-dotenv-plugin": "^2.0.0"
