--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -20,6 +20,7 @@
     "material-ui-icons": "next",
     "native-base": "^2.1.3",
     "react": "~15.4.0-rc.4",
+    "react-contenteditable": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.5.0",
     "react-google-login": "^2.8.5",
@@ -32,6 +33,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
+    "redux-form": "^6.6.3",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
