--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -16,7 +16,8 @@
     "core-decorators": "^0.15.0",
     "folktale": "^2.0.0-alpha3",
     "immutable": "^3.8.1",
-    "material-ui": "next",
+    "jss-theme-reactor": "^0.11.1",
+    "material-ui": "^0.18.0",
     "material-ui-icons": "next",
     "native-base": "^2.1.3",
     "react": "~15.4.0-rc.4",
