--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -16,7 +16,6 @@
     "core-decorators": "^0.15.0",
     "folktale": "^2.0.0-alpha3",
     "immutable": "^3.8.1",
-    "jss-theme-reactor": "^0.11.1",
     "material-ui": "^0.18.0",
     "material-ui-icons": "next",
     "native-base": "^2.1.3",
@@ -24,6 +23,7 @@
     "react-contenteditable": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.5.0",
+    "react-flexbox-grid": "^1.1.3",
     "react-google-login": "^2.8.5",
     "react-native": "0.38.1",
     "react-native-facebook-login": "^1.4.0",
