--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "core-decorators": "^0.15.0",
-    "folktale": "^2.0.0-alpha3",
+    "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
     "material-ui": "^0.18.0",
     "material-ui-icons": "next",
