--- a/js/api/package.json
+++ b/js/api/package.json
@@ -12,6 +12,7 @@
   "author": "Pavlos Polianidis",
   "license": "MIT",
   "dependencies": {
+    "boom": "^4.3.1",
     "dotenv": "^4.0.0",
     "folktale": "^2.0.0-alpha3",
     "global": "^4.3.1",
