--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
     "core-decorators": "^0.15.0",
+    "date-fns": "^1.28.4",
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
     "material-ui": "^0.18.0",
