--- a/operations/.docker/api/Dockerfile
+++ b/operations/.docker/api/Dockerfile
@@ -1,12 +1,24 @@
-FROM node:boron
+FROM node:7.10.0
+
+# Install essential tools
+RUN apt-get -qq update && \
+    apt-get -qq install apt-transport-https && \
+    apt-get -qq install build-essential && \
+    apt-get -qq install git
+
+# install yarn
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
+    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+    apt-get update && apt-get install yarn
 
 # Create app directory
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 # Install app dependencies
-COPY package.json /usr/src/app/
-RUN npm install
+COPY js/api/package.json /usr/src/app/
+
+RUN yarn install
 
 # Bundle app source
 COPY . /usr/src/app
