--- a/js/api/package.json
+++ b/js/api/package.json
@@ -31,7 +31,7 @@
     "node-fetch": "^1.6.3",
     "nodemon": "^1.11.0",
     "passport-http-bearer": "^1.0.1",
-    "uws": "^0.13.0",
+    "uws": "0.14.5",
     "winston": "^2.3.1"
   },
   "devDependencies": {
