--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -6,8 +6,8 @@
     "native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "web:start": "PLATFORM_ENV=web env-cmd ./.env webpack-dev-server",
-    "web:build": "PLATFORM_ENV=web env-cmd ./.env webpack --env.prod=true",
-    "web:prod": "PLATFORM_ENV=web  env-cmd ./.env webpack-dev-server --env.prod=true",
+    "web:build": "PLATFORM_ENV=web env-cmd ./.env.production webpack",
+    "web:prod": "PLATFORM_ENV=web  env-cmd ./.env.production webpack-dev-server --env.prod=true",
     "native:android": "PLATFORM_ENV=mobile env-cmd ./.env react-native run-android",
     "postinstall": "rndebugger-open"
   },
