remove postinstall script

--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -8,8 +8,7 @@
     "web:start": "PLATFORM_ENV=web env-cmd ./.env webpack-dev-server",
     "web:build": "PLATFORM_ENV=web env-cmd ./.env.production webpack",
     "web:prod": "PLATFORM_ENV=web  env-cmd ./.env.production webpack-dev-server --env.prod=true",
-    "native:android": "PLATFORM_ENV=mobile env-cmd ./.env react-native run-android",
-    "postinstall": "rndebugger-open"
+    "native:android": "PLATFORM_ENV=mobile env-cmd ./.env react-native run-android"
   },
   "dependencies": {
     "@most/create": "^2.0.1",
