--- a/operations/.docker/nginx/Dockerfile
+++ b/operations/.docker/nginx/Dockerfile
@@ -36,6 +36,8 @@ ADD js/ui .
 RUN yarn install
 RUN yarn run web:build
 
+RUN ls app/web/dist
+
 RUN mkdir www && \
     cp app/web/index.html www && \
     cp -r app/web/dist/app.bundle.js www && \
