--- a/operations/.docker/api/Dockerfile
+++ b/operations/.docker/api/Dockerfile
@@ -19,9 +19,11 @@ WORKDIR /usr/src/app
 # Install app dependencies
 COPY js/api/package.json /usr/src/app/
 
+RUN yarn global pm2
 RUN yarn install
 
 # Bundle app source
 COPY js/api/ /usr/src/app
 
-CMD [ "yarn", "start" ]
+RUN yarn global pm2
+CMD ["pm2-docker", "./bin/index.js"]
