--- a/js/common/package.json
+++ b/js/common/package.json
@@ -2,11 +2,16 @@
   "name": "common",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "license": "MIT",
   "dependencies": {
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
     "neo4j-driver": "^1.3.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "ava": "^0.19.1",
+    "sinon": "^2.3.1"
   }
 }
