--- a/js/common/package.json
+++ b/js/common/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@most/create": "^2.0.1",
+    "date-fns": "^1.28.5",
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
+    "most": "^1.3.0",
     "neo4j-driver": "^1.3.0",
     "winston": "^2.3.1"
   },
