--- a/js/notificationService/package.json
+++ b/js/notificationService/package.json
@@ -10,13 +10,17 @@
   "main": ".bin/index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
     "most": "^1.3.0",
     "neo4j-driver": "^1.3.0",
+    "socket.io-client": "^2.0.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "ava": "^0.19.1",
+    "nodemon": "^1.11.0",
+    "sinon": "^2.3.1"
   }
 }
