--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,18 @@ services:
       - operations/env/api/.env
     networks:
       - investrackr_network
+  notificationService:
+    container_name: notification-service
+    image: investrackr/notificationservice
+    build:
+      context: .
+      dockerfile: operations/.docker/notificationService/Dockerfile
+    ports:
+      - "8085:5500"
+    env_file:
+      - operations/env/notificationService/.env
+    networks:
+      - investrackr_network
 
 networks:
   investrackr_network:
