--- a/operations/.docker/nginx/Dockerfile
+++ b/operations/.docker/nginx/Dockerfile
@@ -32,10 +32,14 @@ RUN . ~/.nvm/nvm.sh && \
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
+RUN mkdir -p /ui
+RUN mkdir -p /common
+
+COPY js/ui/package.json /ui
 ADD js/common /common
 ADD js/ui /ui
 
-
+WORKDIR /ui
 RUN yarn install
 RUN yarn run web:build
 
