--- a/js/jsconfig.json
+++ b/js/jsconfig.json
@@ -5,12 +5,10 @@
     "experimentalDecorators": true
   },
   "exclude": [
-    "js/ui/node_modules",
-    "js/api/node_modules"
-  ],
-
-  "include": [
-    "js/ui/**/*.js",
-    "js/ui/**/*.jsx"
+    "../.history",
+    "../.vscode",
+    "**/node_modules",
+    "ui/android",
+    "ui/ios"
   ]
 }
