--- a/js/notificationService/package.json
+++ b/js/notificationService/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notification-service",
+  "name": "cryptosis-notification-service",
   "version": "1.0.0",
   "private": true,
   "scripts": {
