--- a/js/common/package.json
+++ b/js/common/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "ava": "^0.19.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "sinon": "^2.3.1"
   }
 }
