--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -61,6 +61,7 @@
     "babel-plugin-transform-async-functions": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-inline-environment-variables": "0.0.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-react": "6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
